Revision history for Async-Event-Interval

1.12 UNREL
    -

1.11    2022-03-09
    - Modified tests to run only on valid CI platforms

1.10    2022-03-07
    - Add tests to ensure that all shared memory segments created during the
      unit test suite run get cleaned up ok
    - Bump prereq of IPC::Shareable to 1.11 due to bug fix where child shared
      memory segments created under one process weren't being registered if the
      parent was created in a different process

1.09    2022-03-05
    - Bump prereq IPC::Shareable to 1.08 due to a fix in creating random SHM
      keys in forked environments, major improvements of its _shm_key_rand()
      function, and its ability to set a 'protected' option so our global shared
      %events hash doesn't get cleaned up automatically
    - Modified examples/shared.pl so it doesn't leak segments and semaphores
      after completion
    - We now remove %events hash in END instead of DESTROY. This way we can have
      objects go out of scope in a script without blowing away the global shared
      data
    - Added _end() so that we can test the END block in unit tests. END{} calls
      _end() upon program termination

1.08    2022-03-03
    - Added pid(), getter-only wrapper for _pid()
    - Added example of using shared data with IPC::Shareable

1.07    2022-03-03
    - interval() no longer requires stop/start of event to take effect
    - Re-arranged initialization routine to allow for the above
    - Interval is now stored in the %events shared hash so that the event can
      access it directly

1.06    2022-03-03
    - Class level hash that contains information about all existing events
      now lives in shared memory so we can track operation informtion from
      within the events themselves
    - Added runs() method, tracks the number of callback executions of an
      event
    - Added errors() method, tracks the number of times a callback fails