@@ -1,26 +1,0 @@
-Changes
-lib/Async/Event/Interval.pm
-Makefile.PL
-MANIFEST			This list of files
-MANIFEST.SKIP
-README
-t/00-load.t
-t/05-base.t
-t/10-shared.t
-t/11-dup_shm_key.t
-t/12-ipc_shareable.t
-t/14-partial_second.t
-t/15-interval.t
-t/16-once.t
-t/20-restart.t
-t/25-start.t
-t/30-status.t
-t/35-timeout.t
-t/40-event_crash.t
-t/45-params.t
-t/50-info_events.t
-t/55-shared_event_state.t
-t/60-error_handling.t
-t/manifest.t
-t/pod-coverage.t
-t/pod.t
