@@ -6,6 +6,7 @@ use strict;
 our $VERSION = '1.12';
 
 use Carp qw(croak);
+use Data::Dumper;
 use IPC::Shareable;
 use Parallel::ForkManager;
 
@@ -16,6 +17,12 @@ $SIG{__WARN__} = sub {
 };
 
 my $id = 0;
+
+# The following variable allows us to differenciate the actual END{} of a program
+# run, or the END{} of a process run. 'plackup' will END{}, but the event objects
+# may still be in scope. We don't want to destroy everything if this is the case
+
+my $DESTROY_CALLED = 0;
 
 my %events;
 my $shared_memory_protect_lock = _rand_shm_lock();
@@ -244,7 +251,6 @@ sub _event {
             }
         }
         else {
-
             my $callback_success = eval {
                 $self->_cb->(@{$self->_args});
                 1;
@@ -316,7 +322,9 @@ sub _started {
     return $self->{started};
 }
 sub DESTROY {
-    $_[0]->stop if $_[0]->pid;
+    if (defined $_[0]) {
+        $_[0]->stop if $_[0]->pid;
+    }
 
     # On events with interval of zero, ForkManager runs finish(), which
     # calls our destroy method. We only want to blow away the %events
@@ -324,9 +332,13 @@ sub DESTROY {
 
     return if (caller())[0] eq 'Parallel::ForkManager::Child';
 
+    $DESTROY_CALLED = 1;
+
     delete $events{$_[0]->id};
 }
 sub _end {
+    return if ! $DESTROY_CALLED;
+
     if (keys %events) {
         warn "The following events remain: " . join(', ', keys %events);
     }
